// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test swiper next & prev & to method 1`] = `
"<div class="smy-swiper" style="width: 100px; height: 100px;">
  <div class="smy-swiper__inner" style="transition-duration: 500ms; transform: translateX(0px); width: 3072px;">
    <div class="smy-swiper-item" style="width: 1024px;">1</div>
    <div class="smy-swiper-item" style="width: 1024px;">2</div>
    <div class="smy-swiper-item" style="width: 1024px;">3</div>
  </div>
  <div class="smy-swiper__indicator"><i class="smy-swiper__indicator-item smy-swiper__indicator-item--active"></i><i class="smy-swiper__indicator-item"></i><i class="smy-swiper__indicator-item"></i></div>
</div>"
`;

exports[`test swiper next & prev & to method 2`] = `
"<div class="smy-swiper" style="width: 100px; height: 100px;">
  <div class="smy-swiper__inner" style="transition-duration: 500ms; transform: translateX(-1024px); width: 3072px;">
    <div class="smy-swiper-item" style="width: 1024px;">1</div>
    <div class="smy-swiper-item" style="width: 1024px;">2</div>
    <div class="smy-swiper-item" style="width: 1024px;">3</div>
  </div>
  <div class="smy-swiper__indicator"><i class="smy-swiper__indicator-item"></i><i class="smy-swiper__indicator-item smy-swiper__indicator-item--active"></i><i class="smy-swiper__indicator-item"></i></div>
</div>"
`;

exports[`test swiper next & prev & to method 3`] = `
"<div class="smy-swiper" style="width: 100px; height: 100px;">
  <div class="smy-swiper__inner" style="transition-duration: 500ms; transform: translateX(0px); width: 3072px;">
    <div class="smy-swiper-item" style="width: 1024px;">1</div>
    <div class="smy-swiper-item" style="width: 1024px;">2</div>
    <div class="smy-swiper-item" style="width: 1024px;">3</div>
  </div>
  <div class="smy-swiper__indicator"><i class="smy-swiper__indicator-item smy-swiper__indicator-item--active"></i><i class="smy-swiper__indicator-item"></i><i class="smy-swiper__indicator-item"></i></div>
</div>"
`;

exports[`test swiper next & prev & to method 4`] = `
"<div class="smy-swiper" style="width: 100px; height: 100px;">
  <div class="smy-swiper__inner" style="transition-duration: 500ms; transform: translateX(-2048px); width: 3072px;">
    <div class="smy-swiper-item" style="width: 1024px;">1</div>
    <div class="smy-swiper-item" style="width: 1024px;">2</div>
    <div class="smy-swiper-item" style="width: 1024px;">3</div>
  </div>
  <div class="smy-swiper__indicator"><i class="smy-swiper__indicator-item"></i><i class="smy-swiper__indicator-item"></i><i class="smy-swiper__indicator-item smy-swiper__indicator-item--active"></i></div>
</div>"
`;
